Főmenü hozzáadása, oda mutató linkek elhelyezése a többi oldalon. Rootmapping az indexre mutat a controllerben.

--- a/src/main/resources/templates/race-details.html
+++ b/src/main/resources/templates/race-details.html
@@ -5,7 +5,7 @@
     <title>Verseny részletei</title>
 </head>
 <body>
-
+<div th:replace="fragments :: menu"></div>
 <h1 th:text="'Verseny: ' + ${race.name}"></h1>
 <p>
     Táv: <span th:text="${race.distanceKm}"></span> km
