--- a/src/main/resources/templates/race-form.html
+++ b/src/main/resources/templates/race-form.html
@@ -5,17 +5,31 @@
     <title>Új verseny létrehozása</title>
 </head>
 <body>
-<div th:replace="fragments :: menu"></div>
+
+<div th:replace="~{fragments :: menu}"></div>
+
 <h1>Új verseny létrehozása</h1>
 
 <form th:action="@{/races/new}" th:object="${race}" method="post">
-    <label>Név:</label><br>
-    <input type="text" th:field="*{name}" required><br><br>
 
-    <label>Táv (km):</label><br>
-    <input type="number" step="0.1" th:field="*{distanceKm}" required><br><br>
+    <div style="margin-bottom: 12px;">
+        <label for="name">Név:</label><br>
+        <input id="name" type="text" th:field="*{name}">
+        <p th:if="${#fields.hasErrors('name')}"
+           th:errors="*{name}"
+           style="color:red"></p>
+    </div>
+
+    <div style="margin-bottom: 12px;">
+        <label for="distanceKm">Táv (km):</label><br>
+        <input id="distanceKm" type="number" step="0.1" th:field="*{distanceKm}">
+        <p th:if="${#fields.hasErrors('distanceKm')}"
+           th:errors="*{distanceKm}"
+           style="color:red"></p>
+    </div>
 
     <button type="submit">Mentés</button>
+
 </form>
 
 <br>
