--- a/src/main/resources/templates/race-details.html
+++ b/src/main/resources/templates/race-details.html
@@ -5,8 +5,11 @@
     <title>Verseny részletei</title>
 </head>
 <body>
+
 <div th:replace="fragments :: menu"></div>
+
 <h1 th:text="'Verseny: ' + ${race.name}"></h1>
+
 <p>
     Táv: <span th:text="${race.distanceKm}"></span> km
 </p>
@@ -16,11 +19,13 @@
 <table>
     <tr>
         <th>Futó</th>
+        <th>Életkor</th>
         <th>Idő (perc)</th>
     </tr>
 
     <tr th:each="res : ${results}">
         <td th:text="${res.runner.name}"></td>
+        <td th:text="${res.runner.age}"></td>
         <td th:text="${res.timeMinutes}"></td>
     </tr>
 </table>
